# Self-Correction-Human-Parsing-with-libtorch-deployment

./: .gitignore  IABN2ABN.py  README.md  bing_get.py  draw.py  evaluate.py  file2txt.py  my_eval.py  simple_extractor.py  train.py  train_id.txt
datasets/: datasets.py
deploy/: example-app.cpp  torch2lib.py
deploy/schp_libtorch/: CMakeLists.txt  schp_infer.cpp
mhp_extension/: demo.ipynb  logits_fusion.py  make_crop_and_mask_w_mask_nms.py
mhp_extension/coco_style_annotation_creator/: test_human2coco_format.py
mhp_extension/global_local_parsing/: global_local_evaluate.py
mhp_parsing/: logits_fusion.py  make_crop_and_mask_w_mask_nms.py  my_mhp.py  parsing_fusion.py
mhp_parsing/coco_style_annotation_creator/: mask_to_coco.py  test_human2coco_format.py
mhp_parsing/deploy/: .gitignore  CMakeLists.txt  de2.h  error.txt  main.cpp  mhp.cpp  mhp.h  test.cpp
mhp_parsing/detect2/: .gitignore
mhp_parsing/detect2/configs/COCO-InstanceSegmentation/: mask_rcnn_R_50_FPN_3x copy.yaml  mask_rcnn_R_50_FPN_3x_copy.yaml
mhp_parsing/detect2/tools/: finetune_net.py  myinfer.py
mhp_parsing/global_local_parsing/: gl_eval.py  global_local_datasets.py  global_local_evaluate.py
modules/: bn.py
networks/: AugmentCE2P.py  __init__.py
utils/: miou.py  schp.py
